--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,14 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
+        "resolveJsonModule": true,
         "esModuleInterop": true,
+        "module": "commonjs",
         "allowSyntheticDefaultImports": true,
         "target": "es6",
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
-        "outDir": "dist",
+        "outDir": "./dist/",
         "typeRoots": [
             "./src/types"
         ],
@@ -21,6 +22,8 @@
         "node_modules"
     ],
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "index.ts",
+        "mongo/*"
     ]
 }
